# CreativeExperimentation

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/: best_model.joblib  logistic_int8.json  logistic_model.joblib
reports/: architecture.mmd  badcases.csv  experiment_report.md  feature_importance.csv  metrics.json  quantization_metrics.json
scripts/: predict.py  quantize.py  train.py  web_app.py
src/diabetes_prediction/: __init__.py  config.py  data.py  features.py  inference.py  logging_utils.py  modeling.py  quantization.py
static/: app.css
templates/: index.html
tests/: test_pipeline.py
